@@ -99,6 +99,11 @@ struct {
   { "OptionsEmulatorSelectBIOSFiles", ID_OPTIONS_EMULATOR_SELECTBIOSFILE },
   { "OptionsEmulatorSpeedupToggle", ID_OPTIONS_EMULATOR_SPEEDUPTOGGLE },
   { "OptionsEmulatorRemoveIntros", ID_OPTIONS_EMULATOR_REMOVEINTROSGBA },
+  { "OptionsEmulatorSaveAuto", ID_OPTIONS_EMULATOR_SAVETYPE_AUTOMATIC },
+  { "OptionsEmulatorSaveEEPROM", ID_OPTIONS_EMULATOR_SAVETYPE_EEPROM },
+  { "OptionsEmulatorSaveSRAM", ID_OPTIONS_EMULATOR_SAVETYPE_SRAM },
+  { "OptionsEmulatorSaveFLASH", ID_OPTIONS_EMULATOR_SAVETYPE_FLASH },
+  { "OptionsEmulatorSaveEEPROMSensor", ID_OPTIONS_EMULATOR_SAVETYPE_EEPROMSENSOR },
   { "OptionsSoundOff", ID_OPTIONS_SOUND_OFF },
   { "OptionsSoundMute", ID_OPTIONS_SOUND_MUTE },
   { "OptionsSoundOn", ID_OPTIONS_SOUND_ON },
